--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<title>Random password GEN</title>
 
-	<link rel="stylesheet" href="css/passGenStyle.css">
+	<link rel="stylesheet" href="passGenStyle.css">
 	
 	<script>
     var keylist="abcdefghijklmnopqrstuvwxyz1234567890!@#$%^&*"
